<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ResultFragment"
    android:background="@color/dark"
    >

    <TextView
        android:id="@+id/questionsTxt"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:gravity="center_vertical|right"
        android:padding="10dp"
        android:text="Результаты"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="250dp"
        android:text="@string/total"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_marginTop="50dp"
        android:text="@string/correct"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="51dp"
        android:text="@string/wrong"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/textView4"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignTop="@+id/textView2"
        android:text="@string/textView5"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView6"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/textView5"
        android:text="@string/textView6"
        android:textSize="25sp" />

</RelativeLayout>